# AudioScibeTranslate

./: .env  .env.example  .env.local  .env.production  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  WORKER_SCALING.md  cleanup_all_tables.py  cleanup_test_data.py  debug_test.py  docker-compose.yml  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 176deed87d24_add_whisper_model_to_audio_file.py  697221b56d83_init_tables.py  add_storage_path_audio_files.py  add_transcript_translation_summary_tables.py  b4833ee574d4_add_audio_files_table.py  d2e3f4a5b6c7_add_metrics_columns.py  f118b9b596f9_user_replace_email_with_name_add_is_.py  remove_legacy_transcript_column.py
frontend/: README.md
scripts/: inspect_audio_files.py  inspect_new_tables.py
src/audioscribetranslate/: __init__.py  main.py  worker.py  worker_manager.py
src/audioscribetranslate/core/: chain_manager.py  config.py  files.py  memory_monitor.py  tasks.py
src/audioscribetranslate/db/: session.py  utils.py  wait_for_postgres.py
src/audioscribetranslate/models/: __init__.py  audio_file.py  base.py  summary.py  transcript.py  translation.py  user.py
src/audioscribetranslate/routers/: audio_file.py  example.py  monitoring.py  summary.py  transcript.py  translation.py  user.py
src/audioscribetranslate/services/: transcription.py
src/uploaded_files/base/admin/: 3b61ec343d2d40eb85cafd3d23cd6eaa_отчёт по ГСМ МАЙ (Саша).xlsx
tests/: conftest.py  test_api_negative.py  test_config_isolated.py  test_config_unit.py  test_pipeline.py
tests/core/: test_config.py  test_files.py  test_memory_monitor.py
tests/db/: test_session.py  test_utils.py
tests/models/: test_audio_file.py  test_summary.py  test_transcript.py  test_translation.py  test_user.py
