[project]
name = "audioscribetranslate"
version = "0.1.0"
description = "Fullstack app for audio transcription"
authors = [
    {name = "Alex Wind",email = "vet-an@yandex.ru"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "faster-whisper (>=1.0.0,<2.0.0)"
]


[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
strict = true
files = ["src/"]

# [tool.poetry.scripts]
# format = "black src && isort src"
# check-format = "black --check src && isort --check-only src"
# type-check = "mypy src"

